<resources>
    <string name="app_name">MyFirst App</string>
    <string name="button">Button</string>
    <string name="monika">Monika</string>
    <string name="para">This is my android application that am
    trying to execute </string>
    <string name="signup">Sign Up</string>
    <string name="name">Enter email</string>
    <string name="password">Enter Password</string>
    <string name="two">Two</string>
    <string name="message">This is delete Alert by monika all files will delete if you click yes </string>
</resources>