<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ImageTextviewActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/signup"
        android:textSize="35sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:textColor="#595959"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="151dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:inputType="text"
        android:autofillHints="name"
        android:hint="Enter Name"
        android:ems="10"
        android:layout_margin="10dp"
        android:textColorHint="#6F6F70"

        />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/name"
        android:layout_marginTop="20dp"
        android:layout_margin="10dp"
        android:textColorHint="#6F6F70"
        />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_margin="10dp"
        android:textColorHint="#6F6F70"
        />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/signup" />

</LinearLayout>



<!--WE need to make changes in manifest file for new activity
it creates activity there so we need to pass intent activity there to view current
page


flat icon for tint
illustration images
-->